css/style.css
/* Reset styles */
* {
    margin: 0;
    padding: 0;
}


/* Global styles */
body {
    font-family: 'Roboto', Arial, sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    justify-content: space-between
}
a {
    text-decoration: none;
    color: #fff;
    display: block;
}


/* Header styles */
header {
    background-color: #78008d;
    color: #fff;
    min-height: 10vh;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 10px;
}

.logo img {
    max-height: 40px;
    margin-left: 20px;
}
nav ul {
    list-style: none;
    display: flex; 
    margin-right: 20px;
    gap: 20px;
}
header nav a:hover {
    color: #e29dee;
}


/* Title styles */
.title, .title-photo, main {
    margin: 10px 12vw;
}

.title-photo {
    display: flex;
    max-height: 240px;
    justify-content: center;
}

.title-photo img {
    object-fit: contain;
    max-width: 60vh;
}

/* Main styles */
main {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/* Block styles */

.block {
    text-align: left;
    padding: 20px;
    border: 1px solid #ccc;
    border-radius: 15px;
}

.block > a {
    color: #000000;
}

.block img { 
    max-height: 160px;
    margin: 10px;
    object-fit: contain;
}

.cta-button {
    display: inline-block;
    padding: 10px 20px;
    background-color: #333;
    margin-top: 20px;
    border-radius: 5px;
}

/* Over-ons styles */
.over-ons img {
    max-width: 400px;
    margin: auto;
}
.over-ons-conteiner {
    display: flex;
    flex-direction: column;
    border-left: 4px solid #ccc;
    justify-content: center;
    padding-left: 20px;
}


/* Utility classes */
.flex {
    display: flex;
}
.flex-column {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.space {
    justify-content: space-between;
}

.grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}
.grid-4 {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}

.grid, .grid-4, .flex {
    gap: 20px;
}

.gap {
    gap: 40px;
}

.reverse {
    flex-direction: row-reverse;
}
h2, h3 {
    margin-bottom: 10px;
}
.center {
    text-align: center;
}
.extra-margin{
    margin: 0 20%;
}


/* Footer styles */
footer {
    background-color: #78008d;
    text-align: center;
    margin-top: 10px;
}

footer p {
    margin: 10px;
    color: #fff;
}

